examples/datalog/08_negation/24_valid_stratification.dl
% Test: Valid Stratification Cases
% Category: Negation
% Description: Tests that valid stratified negation works correctly
% NOTE: Bug cases (should error but don't) are in tests 25-27

.kg create test_circular_neg
.kg use test_circular_neg

% Base facts
+base[(1), (2), (3)].

% Test 1: Simple valid stratification (negation on base relation)
+valid_neg(X) :- base(X), !base(2).
?- valid_neg(X).

% Test 2: Two-layer stratification (should work)
+layer1(X) :- base(X).
+layer2(X) :- layer1(X), !layer1(2).
?- layer2(X).

% Test 3: Negation on derived, non-recursive relation (should work)
+derived(X) :- base(X), X > 1.
+not_derived(X) :- base(X), !derived(X).
?- not_derived(X).

% Expected: (1) - only 1 is in base but not in derived

% Cleanup
.kg use default
.kg drop test_circular_neg
